--- a/curriculo.html
+++ b/curriculo.html
@@ -99,7 +99,7 @@
 
         <section class="download">
             <h2>Download do Currículo</h2>
-            <a href="https://www.alanrodrigofreitas.github.io/e-curriculo/curriculo.pdf" class="download-button">Baixar</a>
+            <a href="curriculo.pdf" class="download-button">Baixar</a>
         </section>
     </main>
     <footer>
