--- a/curriculo.html
+++ b/curriculo.html
@@ -13,8 +13,8 @@
     <header>
         <h1>Alan Rodrigo Pereira Freitas</h1>
         <p>
-            <a href="https://wa.me/+5547992858331" class="contact-link" target="_blank">+55 (47) 9.9285-8331</a> | 
-            <a href="mailto:arfrei47@outlook.com" class="contact-link" target="_blank">arfrei47@outlook.com</a> | 
+            <a href="https://wa.me/+5547992858331" class="contact-link" target="_blank">WhatsApp</a> | 
+            <a href="mailto:arfrei47@outlook.com" class="contact-link" target="_blank">E-mail</a> | 
             <a href="https://www.linkedin.com/in/arfrei47" class="contact-link" target="_blank">LinkedIn</a> | 
             <a href="https://www.github.com/alanrodrigofreitas" class="contact-link" target="_blank">GitHub</a>
         </p>
